--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  user-select: none; }
 
 canvas {
   background: #eee;
@@ -8,16 +9,26 @@ canvas {
   margin: 0 auto;
   width: 100%; }
 
+body,
+html {
+  height: 100%;
+  width: 100%;
+  background: #eee; }
+
 .controls {
-  position: absolute;
   width: 100%;
   display: flex;
   justify-content: space-around;
-  top: 443px;
-  gap: 70px; }
+  gap: 70px;
+  margin-top: 50px; }
   .controls .control {
-    height: 100px;
-    width: 100px; }
+    height: 130px;
+    width: 130px;
+    font-size: 72px;
+    font-family: NerdFont;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
 
 @font-face {
   font-family: 'NerdFont';
