--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,7 +6,7 @@
 
 
 canvas {
-    background: #eee;
+    background: #456a2a;
     display: block;
     margin: 0 auto;
     width: 100%;
@@ -16,7 +16,7 @@ body,
 html {
     height: 100%;
     width: 100%;
-    background: #eee;
+    background: #456a2a;
 }
 
 .controls {
