--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,10 @@ html {
   display: flex;
   justify-content: space-around;
   gap: 70px;
-  margin-top: 50px; }
+  margin-top: 50px;
+  z-index: 1;
+  position: absolute;
+  bottom: 50px; }
   .controls .control {
     height: 130px;
     width: 130px;
@@ -29,6 +32,25 @@ html {
     display: flex;
     justify-content: center;
     align-items: center; }
+
+.lore {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #ddd8c7; }
+  .lore img {
+    width: 100%; }
+  .lore .bubble {
+    position: relative; }
+    .lore .bubble .text {
+      position: absolute;
+      top: 33%;
+      left: 10%;
+      font-size: 24px;
+      font-family: NerdFont;
+      color: #000; }
 
 @font-face {
   font-family: 'NerdFont';
