--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,7 +4,6 @@
     user-select: none;
 }
 
-
 canvas {
     background: #456a2a;
     display: block;
@@ -25,7 +24,9 @@ html {
     justify-content: space-around;
     gap: 70px;
     margin-top: 50px;
-
+    z-index: 1;
+    position: absolute;
+    bottom: 50px;
 
     .control {
         height: 130px;
@@ -35,6 +36,32 @@ html {
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+}
+
+.lore {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ddd8c7;
+
+    img {
+        width: 100%;
+    }
+
+    .bubble {
+        position: relative;
+
+        .text {
+            position: absolute;
+            top: 33%;
+            left: 10%;
+            font-size: 24px;
+            font-family: NerdFont;
+            color: #000;
+        }
     }
 }
 
